# Tars

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/migrations/2024-10-06-165454_create_collections/: up.sql
src-tauri/migrations/2024-10-12-071230_create_requests/: up.sql
src-tauri/migrations/2025-01-23-163446_create_tabs/: down.sql  up.sql
src-tauri/src/: cmd.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs
src-tauri/src/utils/: helper.rs  mod.rs
src/Util/: Modal.svelte  Toast.svelte  util.js
src/components/: Header.svelte  LeftFold.svelte  Request.svelte  Response.svelte  RightFold.svelte  Sidebar.svelte
src/components/request/: RequestInput.svelte  RequestNav.svelte
src/components/request/Body/: FormDAta.svelte  FormData.svelte  FormDataFile.svelte  HtmlEditor.svelte  JsonEditor.svelte  TextEditor.svelte  XWwwFormUrlencoded.svelte  XmlEditor.svelte
src/components/request/Nav/: AuthTab.svelte  AuthTabSelect.svelte  BodyTab.svelte  HeaderTab.svelte  PrarameterTab.svelte  RequestTabs.svelte
src/components/request/Nav/AuthComponents/: BasicAuth.svelte  BearerToken.svelte
src/components/response/: Body.svelte  Headers.svelte  ResponseNav.svelte  ResponseTabs.svelte
src/data/: httpStatusCodes.json
src/routes/: +page.svelte
src/storage/: toastStore.js
