[package]
name = "arya"
version = "0.1.0"
description = "A Rust Client"
authors = ["sandeepsreekumar75@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "arya_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["devtools"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
uuid = { version = "1.2.1", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
dotenv = "0.15.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
serde_urlencoded = "0.7"
base64 = "0.21"  
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
